# ufc

./: README.md
SD/RemoteObject/: pyproject.toml
SD/TA/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
SD/TA/src/: client.py  cliente.py  data_com.py  main.py  server.py  servidor.py
Web/trabalho-final/: .env.example  .flake8  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
Web/trabalho-final/src/: __main__.py  gunicorn_runner.py  logging.py  settings.py
Web/trabalho-final/src/static/css/: input.css  output.css
Web/trabalho-final/src/static/js/: htmx_response.js  modal.js  script.js
Web/trabalho-final/src/templates/cause/pages/: cause.html
Web/trabalho-final/src/templates/cause/partials/: _main-content.html
Web/trabalho-final/src/templates/consequence/page/: consequence.html
Web/trabalho-final/src/templates/consequence/partials/: _main-content.html
Web/trabalho-final/src/templates/dashboard/pages/: dashboard.html
Web/trabalho-final/src/templates/dashboard/partials/: _main-content.html
Web/trabalho-final/src/templates/exception/: base-exceptions.html
Web/trabalho-final/src/templates/exception/pages/: 403.html  404.html  500.html
Web/trabalho-final/src/templates/faq/pages/: faq.html
Web/trabalho-final/src/templates/global/: base.html
Web/trabalho-final/src/utils/: shortcuts.py
Web/trabalho-final/src/web/: __init__.py  application.py  handlers.py  lifetime.py
Web/trabalho-final/src/web/api/: __init__.py
Web/trabalho-final/src/web/frontend/: __init__.py  router.py
(+54 files in other folders)
